rendu2/_build/parser.output
   0  $accept : %entry% $end

   1  main : expression EOL

   2  expression : INT
   3             | LPAREN expression RPAREN
   4             | expression PLUS expression
   5             | expression TIMES expression
   6             | expression MINUS expression
   7             | MINUS expression
   8             | VAR
   9             | LET VAR EQUAL expression IN expression
  10             | IF bool_expression THEN expression ELSE expression

  11  bool_expression : LPAREN bool_expression RPAREN
  12                  | bool_expression AND bool_expression
  13                  | bool_expression OR bool_expression
  14                  | NOT bool_expression
  15                  | expression LEQ expression
  16                  | expression GEQ expression
  17                  | expression LOWER expression
  18                  | expression GREATER expression
  19                  | TRUE
  20                  | FALSE

  21  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (21)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	IF  shift 6
	LET  shift 7
	LPAREN  shift 8
	.  error

	main  goto 9
	expression  goto 10


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	expression : INT .  (2)

	.  reduce 2


state 4
	expression : VAR .  (8)

	.  reduce 8


state 5
	expression : MINUS . expression  (7)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	IF  shift 6
	LET  shift 7
	LPAREN  shift 8
	.  error

	expression  goto 11


state 6
	expression : IF . bool_expression THEN expression ELSE expression  (10)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	NOT  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 6
	LET  shift 7
	LPAREN  shift 15
	.  error

	expression  goto 16
	bool_expression  goto 17


state 7
	expression : LET . VAR EQUAL expression IN expression  (9)

	VAR  shift 18
	.  error


state 8
	expression : LPAREN . expression RPAREN  (3)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	IF  shift 6
	LET  shift 7
	LPAREN  shift 8
	.  error

	expression  goto 19


state 9
	%entry% : '\001' main .  (21)

	.  reduce 21


state 10
	main : expression . EOL  (1)
	expression : expression . PLUS expression  (4)
	expression : expression . TIMES expression  (5)
	expression : expression . MINUS expression  (6)

	PLUS  shift 20
	TIMES  shift 21
	MINUS  shift 22
	EOL  shift 23
	.  error


state 11
	expression : expression . PLUS expression  (4)
	expression : expression . TIMES expression  (5)
	expression : expression . MINUS expression  (6)
	expression : MINUS expression .  (7)

	.  reduce 7


state 12
	bool_expression : NOT . bool_expression  (14)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	NOT  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 6
	LET  shift 7
	LPAREN  shift 15
	.  error

	expression  goto 16
	bool_expression  goto 24


state 13
	bool_expression : TRUE .  (19)

	.  reduce 19


state 14
	bool_expression : FALSE .  (20)

	.  reduce 20


state 15
	expression : LPAREN . expression RPAREN  (3)
	bool_expression : LPAREN . bool_expression RPAREN  (11)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	NOT  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 6
	LET  shift 7
	LPAREN  shift 15
	.  error

	expression  goto 25
	bool_expression  goto 26


state 16
	expression : expression . PLUS expression  (4)
	expression : expression . TIMES expression  (5)
	expression : expression . MINUS expression  (6)
	bool_expression : expression . LEQ expression  (15)
	bool_expression : expression . GEQ expression  (16)
	bool_expression : expression . LOWER expression  (17)
	bool_expression : expression . GREATER expression  (18)

	PLUS  shift 20
	TIMES  shift 21
	MINUS  shift 22
	GEQ  shift 27
	LEQ  shift 28
	GREATER  shift 29
	LOWER  shift 30
	.  error


state 17
	expression : IF bool_expression . THEN expression ELSE expression  (10)
	bool_expression : bool_expression . AND bool_expression  (12)
	bool_expression : bool_expression . OR bool_expression  (13)

	AND  shift 31
	OR  shift 32
	THEN  shift 33
	.  error


state 18
	expression : LET VAR . EQUAL expression IN expression  (9)

	EQUAL  shift 34
	.  error


state 19
	expression : LPAREN expression . RPAREN  (3)
	expression : expression . PLUS expression  (4)
	expression : expression . TIMES expression  (5)
	expression : expression . MINUS expression  (6)

	PLUS  shift 20
	TIMES  shift 21
	MINUS  shift 22
	RPAREN  shift 35
	.  error


state 20
	expression : expression PLUS . expression  (4)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	IF  shift 6
	LET  shift 7
	LPAREN  shift 8
	.  error

	expression  goto 36


state 21
	expression : expression TIMES . expression  (5)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	IF  shift 6
	LET  shift 7
	LPAREN  shift 8
	.  error

	expression  goto 37


state 22
	expression : expression MINUS . expression  (6)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	IF  shift 6
	LET  shift 7
	LPAREN  shift 8
	.  error

	expression  goto 38


state 23
	main : expression EOL .  (1)

	.  reduce 1


24: shift/reduce conflict (shift 31, reduce 14) on AND
24: shift/reduce conflict (shift 32, reduce 14) on OR
state 24
	bool_expression : bool_expression . AND bool_expression  (12)
	bool_expression : bool_expression . OR bool_expression  (13)
	bool_expression : NOT bool_expression .  (14)

	AND  shift 31
	OR  shift 32
	THEN  reduce 14
	RPAREN  reduce 14


state 25
	expression : LPAREN expression . RPAREN  (3)
	expression : expression . PLUS expression  (4)
	expression : expression . TIMES expression  (5)
	expression : expression . MINUS expression  (6)
	bool_expression : expression . LEQ expression  (15)
	bool_expression : expression . GEQ expression  (16)
	bool_expression : expression . LOWER expression  (17)
	bool_expression : expression . GREATER expression  (18)

	PLUS  shift 20
	TIMES  shift 21
	MINUS  shift 22
	GEQ  shift 27
	LEQ  shift 28
	GREATER  shift 29
	LOWER  shift 30
	RPAREN  shift 35
	.  error


state 26
	bool_expression : LPAREN bool_expression . RPAREN  (11)
	bool_expression : bool_expression . AND bool_expression  (12)
	bool_expression : bool_expression . OR bool_expression  (13)

	AND  shift 31
	OR  shift 32
	RPAREN  shift 39
	.  error


state 27
	bool_expression : expression GEQ . expression  (16)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	IF  shift 6
	LET  shift 7
	LPAREN  shift 8
	.  error

	expression  goto 40


state 28
	bool_expression : expression LEQ . expression  (15)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	IF  shift 6
	LET  shift 7
	LPAREN  shift 8
	.  error

	expression  goto 41


state 29
	bool_expression : expression GREATER . expression  (18)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	IF  shift 6
	LET  shift 7
	LPAREN  shift 8
	.  error

	expression  goto 42


state 30
	bool_expression : expression LOWER . expression  (17)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	IF  shift 6
	LET  shift 7
	LPAREN  shift 8
	.  error

	expression  goto 43


state 31
	bool_expression : bool_expression AND . bool_expression  (12)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	NOT  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 6
	LET  shift 7
	LPAREN  shift 15
	.  error

	expression  goto 16
	bool_expression  goto 44


state 32
	bool_expression : bool_expression OR . bool_expression  (13)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	NOT  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 6
	LET  shift 7
	LPAREN  shift 15
	.  error

	expression  goto 16
	bool_expression  goto 45


state 33
	expression : IF bool_expression THEN . expression ELSE expression  (10)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	IF  shift 6
	LET  shift 7
	LPAREN  shift 8
	.  error

	expression  goto 46


state 34
	expression : LET VAR EQUAL . expression IN expression  (9)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	IF  shift 6
	LET  shift 7
	LPAREN  shift 8
	.  error

	expression  goto 47


state 35
	expression : LPAREN expression RPAREN .  (3)

	.  reduce 3


state 36
	expression : expression . PLUS expression  (4)
	expression : expression PLUS expression .  (4)
	expression : expression . TIMES expression  (5)
	expression : expression . MINUS expression  (6)

	TIMES  shift 21
	PLUS  reduce 4
	MINUS  reduce 4
	GEQ  reduce 4
	LEQ  reduce 4
	GREATER  reduce 4
	LOWER  reduce 4
	AND  reduce 4
	OR  reduce 4
	THEN  reduce 4
	ELSE  reduce 4
	IN  reduce 4
	RPAREN  reduce 4
	EOL  reduce 4


state 37
	expression : expression . PLUS expression  (4)
	expression : expression . TIMES expression  (5)
	expression : expression TIMES expression .  (5)
	expression : expression . MINUS expression  (6)

	.  reduce 5


state 38
	expression : expression . PLUS expression  (4)
	expression : expression . TIMES expression  (5)
	expression : expression . MINUS expression  (6)
	expression : expression MINUS expression .  (6)

	TIMES  shift 21
	PLUS  reduce 6
	MINUS  reduce 6
	GEQ  reduce 6
	LEQ  reduce 6
	GREATER  reduce 6
	LOWER  reduce 6
	AND  reduce 6
	OR  reduce 6
	THEN  reduce 6
	ELSE  reduce 6
	IN  reduce 6
	RPAREN  reduce 6
	EOL  reduce 6


state 39
	bool_expression : LPAREN bool_expression RPAREN .  (11)

	.  reduce 11


state 40
	expression : expression . PLUS expression  (4)
	expression : expression . TIMES expression  (5)
	expression : expression . MINUS expression  (6)
	bool_expression : expression GEQ expression .  (16)

	PLUS  shift 20
	TIMES  shift 21
	MINUS  shift 22
	AND  reduce 16
	OR  reduce 16
	THEN  reduce 16
	RPAREN  reduce 16


state 41
	expression : expression . PLUS expression  (4)
	expression : expression . TIMES expression  (5)
	expression : expression . MINUS expression  (6)
	bool_expression : expression LEQ expression .  (15)

	PLUS  shift 20
	TIMES  shift 21
	MINUS  shift 22
	AND  reduce 15
	OR  reduce 15
	THEN  reduce 15
	RPAREN  reduce 15


state 42
	expression : expression . PLUS expression  (4)
	expression : expression . TIMES expression  (5)
	expression : expression . MINUS expression  (6)
	bool_expression : expression GREATER expression .  (18)

	PLUS  shift 20
	TIMES  shift 21
	MINUS  shift 22
	AND  reduce 18
	OR  reduce 18
	THEN  reduce 18
	RPAREN  reduce 18


state 43
	expression : expression . PLUS expression  (4)
	expression : expression . TIMES expression  (5)
	expression : expression . MINUS expression  (6)
	bool_expression : expression LOWER expression .  (17)

	PLUS  shift 20
	TIMES  shift 21
	MINUS  shift 22
	AND  reduce 17
	OR  reduce 17
	THEN  reduce 17
	RPAREN  reduce 17


44: shift/reduce conflict (shift 31, reduce 12) on AND
44: shift/reduce conflict (shift 32, reduce 12) on OR
state 44
	bool_expression : bool_expression . AND bool_expression  (12)
	bool_expression : bool_expression AND bool_expression .  (12)
	bool_expression : bool_expression . OR bool_expression  (13)

	AND  shift 31
	OR  shift 32
	THEN  reduce 12
	RPAREN  reduce 12


45: shift/reduce conflict (shift 31, reduce 13) on AND
45: shift/reduce conflict (shift 32, reduce 13) on OR
state 45
	bool_expression : bool_expression . AND bool_expression  (12)
	bool_expression : bool_expression . OR bool_expression  (13)
	bool_expression : bool_expression OR bool_expression .  (13)

	AND  shift 31
	OR  shift 32
	THEN  reduce 13
	RPAREN  reduce 13


state 46
	expression : expression . PLUS expression  (4)
	expression : expression . TIMES expression  (5)
	expression : expression . MINUS expression  (6)
	expression : IF bool_expression THEN expression . ELSE expression  (10)

	PLUS  shift 20
	TIMES  shift 21
	MINUS  shift 22
	ELSE  shift 48
	.  error


state 47
	expression : expression . PLUS expression  (4)
	expression : expression . TIMES expression  (5)
	expression : expression . MINUS expression  (6)
	expression : LET VAR EQUAL expression . IN expression  (9)

	PLUS  shift 20
	TIMES  shift 21
	MINUS  shift 22
	IN  shift 49
	.  error


state 48
	expression : IF bool_expression THEN expression ELSE . expression  (10)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	IF  shift 6
	LET  shift 7
	LPAREN  shift 8
	.  error

	expression  goto 50


state 49
	expression : LET VAR EQUAL expression IN . expression  (9)

	INT  shift 3
	VAR  shift 4
	MINUS  shift 5
	IF  shift 6
	LET  shift 7
	LPAREN  shift 8
	.  error

	expression  goto 51


50: shift/reduce conflict (shift 20, reduce 10) on PLUS
50: shift/reduce conflict (shift 21, reduce 10) on TIMES
50: shift/reduce conflict (shift 22, reduce 10) on MINUS
state 50
	expression : expression . PLUS expression  (4)
	expression : expression . TIMES expression  (5)
	expression : expression . MINUS expression  (6)
	expression : IF bool_expression THEN expression ELSE expression .  (10)

	PLUS  shift 20
	TIMES  shift 21
	MINUS  shift 22
	GEQ  reduce 10
	LEQ  reduce 10
	GREATER  reduce 10
	LOWER  reduce 10
	AND  reduce 10
	OR  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	IN  reduce 10
	RPAREN  reduce 10
	EOL  reduce 10


51: shift/reduce conflict (shift 20, reduce 9) on PLUS
51: shift/reduce conflict (shift 21, reduce 9) on TIMES
51: shift/reduce conflict (shift 22, reduce 9) on MINUS
state 51
	expression : expression . PLUS expression  (4)
	expression : expression . TIMES expression  (5)
	expression : expression . MINUS expression  (6)
	expression : LET VAR EQUAL expression IN expression .  (9)

	PLUS  shift 20
	TIMES  shift 21
	MINUS  shift 22
	GEQ  reduce 9
	LEQ  reduce 9
	GREATER  reduce 9
	LOWER  reduce 9
	AND  reduce 9
	OR  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	IN  reduce 9
	RPAREN  reduce 9
	EOL  reduce 9


State 24 contains 2 shift/reduce conflicts.
State 44 contains 2 shift/reduce conflicts.
State 45 contains 2 shift/reduce conflicts.
State 50 contains 3 shift/reduce conflicts.
State 51 contains 3 shift/reduce conflicts.


27 terminals, 5 nonterminals
22 grammar rules, 52 states
